[fix-Bears]: The images are aligned with respect to the top

--- a/zoo-css-challenge/style.css
+++ b/zoo-css-challenge/style.css
@@ -109,7 +109,7 @@ footer {
 }
 
 .image-container img:first-of-type {
-  vertical-align: bottom;
+  /* vertical-align: bottom; */
   border-color: #56e39f;
 }
 
